Fixed address showing. Fixed scrollbars. set default status.dat path

--- a/default.css
+++ b/default.css
@@ -3,7 +3,7 @@
     margin: 0px;
 }
 
-html, body { height: 99%; }
+html, body { height: 98%; }
 
 body { 
     font-family: Verdana, Tahoma, Helvetica, Arial, sans-serif;
@@ -122,7 +122,8 @@ div.state {
 
 .problem_table {
     max-height: 44%;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .svlogo {
